trying to figure out second article layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ Developer @GA in NYC
 body {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
     background: #fff;
+    display: inline-block;
 }
 
 /* LAYOUT*/
@@ -52,11 +53,14 @@ body {
 /* Center the container */
 
 #container {
-    width: 1200px;
+    width: 100%;
     margin: auto;
 }
 
 header {
+    width: 100%;
+    background-size: 100%;
+    background-size: cover;
     background: #033048;
     background-image: url(../images/header_bg.jpg);
     background-position: center bottom;
@@ -152,6 +156,7 @@ h4 {
 h6 {
     color: #f9e42e;
 }
+
 header h1,
 header nav {
     display: inline-block;
@@ -186,7 +191,7 @@ header nav a:active {
 }
 
 #articles {
-    width: 700px;
+    width: 500px;
 }
 
 article p {
@@ -217,7 +222,7 @@ article p {
 
 article:after {
     content: " ";
-    display: block;
+    display: inline-block;
     width: 100%;
     height: 1px;
     background: #033048;
@@ -225,8 +230,9 @@ article:after {
 }
 
 aside {
-    width: 240px;
+    width: 300px;
     color: #033048;
+    float: right;
 }
 
 #categories nav a {
@@ -250,6 +256,7 @@ aside {
 }
 
 aside h4 {
+    margin-top: 60px;
     margin-bottom: 20px;
   }
 
